Fixed line wrap for UI Output file names

--- a/style/uioutput.css
+++ b/style/uioutput.css
@@ -18,6 +18,7 @@
     display: block;
     color: var(--jp-content-link-color);
     text-decoration: none;
+    line-break: anywhere;
 }
 
 .nbtools-file-menu {
